--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_messaging: ^14.7.19
   uuid: ^4.4.0
   flutter_native_splash: ^2.3.10
+  cached_network_image: ^3.3.1
   
 
 dev_dependencies:
@@ -83,6 +84,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/space/
     - assets/svgs/
     - assets/svgs/profile/
 
