--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   uuid: ^4.4.0
   flutter_native_splash: ^2.3.10
   cached_network_image: ^3.3.1
+  firebase_database: ^10.4.9
   
 
 dev_dependencies:
