--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_native_splash: ^2.3.10
   cached_network_image: ^3.3.1
   firebase_database: ^10.4.9
+  http: ^0.13.6
   
 
 dev_dependencies:
